--- a/css/main.css
+++ b/css/main.css
@@ -1869,7 +1869,7 @@ input.num-product::-webkit-inner-spin-button {
 
 /*//////////////////////////////////////////////////////////////////
 [ Modal1 ]*/
-.wrap-modal1 {
+.wrap-modal {
   position: fixed;
   width: 100%;
   height: 100vh;
@@ -1887,7 +1887,7 @@ input.num-product::-webkit-inner-spin-button {
   opacity: 0;
 }
 
-.overlay-modal1 {
+.overlay-modal {
   position: fixed;
   z-index: -1;
   width: 100%;
@@ -1898,12 +1898,12 @@ input.num-product::-webkit-inner-spin-button {
   opacity: 0.8;
 }
 
-.show-modal1 {
+.show-modal {
   visibility: visible;
   opacity: 1;
 }
-/*//////////////////////////////////////////////////////////////////
-[ Modal2 ]*/
+
+/*
 .wrap-modal2 {
   position: fixed;
   width: 100%;
@@ -1938,8 +1938,7 @@ input.num-product::-webkit-inner-spin-button {
   opacity: 1;
 }
 
-/*//////////////////////////////////////////////////////////////////
-[ Modal2 ]*/
+
 .wrap-modal3 {
   position: fixed;
   width: 100%;
@@ -1972,7 +1971,7 @@ input.num-product::-webkit-inner-spin-button {
 .show-modal3 {
   visibility: visible;
   opacity: 1;
-}
+} */
 /*//////////////////////////////////////////////////////////////////
 [ Table Shopping Cart ]*/
 
