--- a/css/signup-style.css
+++ b/css/signup-style.css
@@ -1,45 +1,7 @@
-/* -------------------------------- 
-
-Primary style
-
--------------------------------- */
-/* *, *::after, *::before {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
-body {
-  font-size: 1.6rem;
-  font-family: "PT Sans", sans-serif;
-  color: #505260;
-  background-color: white;
-}
-
-a {
-  color: #2f889a;
-  text-decoration: none;
-}
-
-img {
-  max-width: 100%;
-}
-
-input, textarea {
-  font-family: "PT Sans", sans-serif;
-  font-size: 1.6rem;
-}
-
-input::-ms-clear, textarea::-ms-clear {
-  display: none;
-} */
 
 /* -------------------------------- 
 
-Login/Signup modal window - by CodyHouse.co
+Login/Signup modal window 
 
 -------------------------------- */
 .cd-main-header {
@@ -84,88 +46,6 @@ Login/Signup modal window - by CodyHouse.co
   }
 }
 
-.cd-main-nav {
-  float: right;
-  margin-right: 5%;
-  width: 44px;
-  height: 100%;
-  background: url("../img/cd-icon-menu.svg") no-repeat center center;
-  cursor: pointer;
-}
-
-.cd-main-nav__list {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  -webkit-transform: translateY(-100%);
-      -ms-transform: translateY(-100%);
-          transform: translateY(-100%);
-}
-
-.cd-main-nav__list.cd-main-nav__list--is-visible {
-  -webkit-transform: translateY(50px);
-      -ms-transform: translateY(50px);
-          transform: translateY(50px);
-}
-
-.cd-main-nav__item {
-  display: block;
-  height: 50px;
-  line-height: 50px;
-  padding-left: 5%;
-  background: #292a34;
-  border-top: 1px solid #3b3d4b;
-  color: #FFF;
-}
-
-@media only screen and (min-width: 768px) {
-  .cd-main-nav {
-    /* reset style */
-    width: auto;
-    height: auto;
-    background: none;
-    cursor: auto;
-  }
-  .cd-main-nav__list {
-    /* reset style */
-    position: static;
-    width: auto;
-    -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-            transform: translateY(0);
-    line-height: 80px;
-  }
-  .cd-main-nav__list.cd-main-nav__list--is-visible {
-    /* reset style */
-    -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
-            transform: translateY(0);
-  }
-  .cd-main-nav__list li {
-    display: inline-block;
-    margin-left: 1em;
-  }
-  .cd-main-nav__list li:nth-last-child(2) {
-    margin-left: 2em;
-  }
-  .cd-main-nav__item {
-    display: inline-block;
-    height: auto;
-    line-height: normal;
-    background: transparent;
-  }
-  .cd-main-nav__item.cd-main-nav__item--signin, .cd-main-nav__item.cd-main-nav__item--signup {
-    padding: .6em 1em;
-    border-radius: 50em;
-  }
-  .cd-main-nav__item.cd-main-nav__item--signin {
-    border: 1px solid rgba(255, 255, 255, 0.6);
-  }
-  .cd-main-nav__item.cd-main-nav__item--signup {
-    background: #2f889a;
-  }
-}
 
 /* -------------------------------- 
 
@@ -178,14 +58,21 @@ x sigin/signup popup
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(52, 54, 66, 0.9);
-  z-index: 3;
+  background: rgba(29, 29, 29, 0.9);
+  z-index: 9000;
   overflow-y: auto;
   cursor: pointer;
   visibility: hidden;
   opacity: 0;
-  -webkit-transition: opacity 0.3s, visibility 0.3s;
-  transition: opacity 0.3s, visibility 0.3s;
+  /* -webkit-transition: opacity 0.3s, visibility 0.3s;
+  transition: opacity 0.3s, visibility 0.3s; */
+  font-family: Poppins-Regular;
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+
+
 }
 
 .cd-signin-modal.cd-signin-modal--is-visible {
@@ -304,15 +191,15 @@ x sigin/signup popup
 }
 
 .cd-signin-modal__label.cd-signin-modal__label--username {
-  background-image: url("../img/cd-icon-username.svg");
+  background-image: url("../images/icons/cd-icon-username.svg");
 }
 
 .cd-signin-modal__label.cd-signin-modal__label--email {
-  background-image: url("../img/cd-icon-email.svg");
+  background-image: url("../images/icons/cd-icon-email.svg");
 }
 
 .cd-signin-modal__label.cd-signin-modal__label--password {
-  background-image: url("../img/cd-icon-password.svg");
+  background-image: url("../images/icons/cd-icon-password.svg");
 }
 
 .cd-signin-modal__input {
@@ -350,7 +237,7 @@ x sigin/signup popup
 .cd-signin-modal__input[type=submit] {
   padding: 16px 0;
   cursor: pointer;
-  background: #2f889a;
+  background: #6c7ae0;
   color: #FFF;
   font-weight: bold;
   border: none;
@@ -362,7 +249,7 @@ x sigin/signup popup
 }
 
 .cd-signin-modal__input[type=submit]:hover, .cd-signin-modal__input[type=submit]:focus {
-  background: #3599ae;
+  background: #161616;
   outline: none;
 }
 
@@ -477,7 +364,7 @@ x sigin/signup popup
   height: 40px;
   right: 0;
   top: -40px;
-  background: url("../img/cd-icon-close.svg") no-repeat center center;
+  background: url("../images/icons/cd-icon-close.svg") no-repeat center center;
   color: transparent;
   text-indent: 100%;
   white-space: nowrap;
