fixed qty change in cart

--- a/templates/top-banner.html
+++ b/templates/top-banner.html
@@ -37,27 +37,27 @@
                 <!-- Menu desktop -->
                 <div class="menu-desktop">
                     <ul class="main-menu">
-                        <li class="active-menu">
+                        <li class="active-menu menu">
                             <a href="/">Home</a>
                         </li>
 
-                        <li class="">
+                        <li class="menu">
                             <a href="/product-page">Shop</a>
                         </li>
 
-                        <li class=""> 
+                        <li class="menu"> 
                             <a href="/cart-page">Cart</a>
                         </li>
 
-                        <li class="">
+                        <li class="menu">
                             <a href="blog.html">Blog</a>
                         </li>
 
-                        <li class="">
+                        <li class="menu">
                             <a href="about.html">About</a>
                         </li>
 
-                        <li class="">
+                        <li class="menu">
                             <a href="contact.html">Contact</a>
                         </li>
                     </ul>
@@ -156,7 +156,7 @@
             </li>
 
             <li>
-                <a href="/cart-page" class="label1 rs1" data-label1="hot">Features</a>
+                <a href="/cart-page" class="label1 rs1">Cart</a>
             </li>
 
             <li>
@@ -190,4 +190,5 @@
     </div>
 
 
+</header>
 </html>
