--- a/templates/index.html
+++ b/templates/index.html
@@ -91,15 +91,11 @@
 							</li>
 	
 							<li class="">
-								<a href="blog.html">Blog</a>
+								<a href="/aboutus">About</a>
 							</li>
 	
 							<li class="">
-								<a href="about.html">About</a>
-							</li>
-	
-							<li class="">
-								<a href="contact.html">Contact</a>
+								<a href="/contactus">Contact</a>
 							</li>
 						</ul>
 					</div>	
@@ -201,15 +197,11 @@
 				</li>
 	
 				<li>
-					<a href="blog.html">Blog</a>
+					<a href="/aboutus">About</a>
 				</li>
 	
 				<li>
-					<a href="about.html">About</a>
-				</li>
-	
-				<li>
-					<a href="contact.html">Contact</a>
+					<a href="/contactus">Contact</a>
 				</li>
 			</ul>
 		</div>
