--- a/templates/product.html
+++ b/templates/product.html
@@ -91,16 +91,13 @@
 								<a href="/cart-page">Cart</a>
 							</li>
 	
+	
 							<li class="">
-								<a href="blog.html">Blog</a>
+								<a href="/aboutus">About</a>
 							</li>
 	
 							<li class="">
-								<a href="about.html">About</a>
-							</li>
-	
-							<li class="">
-								<a href="contact.html">Contact</a>
+								<a href="/contactus">Contact</a>
 							</li>
 						</ul>
 					</div>	
@@ -201,16 +198,13 @@
 					<a href="/cart-page" >Cart</a>
 				</li>
 	
+	
 				<li>
-					<a href="blog.html">Blog</a>
+					<a href="/aboutus">About</a>
 				</li>
 	
 				<li>
-					<a href="about.html">About</a>
-				</li>
-	
-				<li>
-					<a href="contact.html">Contact</a>
+					<a href="/contactus">Contact</a>
 				</li>
 			</ul>
 		</div>
