included product id

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,7 @@
 					</div>
 	
 					<div class="right-top-bar flex-w h-full">
-						<a href="#" class="flex-c-m trans-04 p-lr-25 js-signin-modal-trigger" data-signin="login">
+						<a href="#" class="flex-c-m trans-04 p-lr-25 js-signin-modal-trigger signin-out" data-signin="login" data-toggle="modal" data-target="">
 							Sign In
 						</a>
 	
@@ -159,7 +159,7 @@
 				<li>
 					<div class="right-top-bar flex-w h-full">
 	
-						<a href="#" class="flex-c-m trans-04 p-lr-10 js-signin-modal-trigger" data-signin="login">
+						<a href="#" class="flex-c-m trans-04 p-lr-10 js-signin-modal-trigger signin-out" data-signin="login" data-toggle="modal" data-target="">
 							Sign In
 						</a>
 	
@@ -731,8 +731,8 @@
 			</div>
 
 			<div class="row isotope-grid" id='ProductPage'>
-
-				 <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				This is a product overview pane.
+				 <!-- <div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 					
 					<div class="block2">
 						<div class="block2-pic hov-img0">
@@ -762,7 +762,7 @@
 							</div>
 						</div>
 					</div>
-				</div> 
+				</div>  -->
 				<!-- 
 				<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 					
@@ -1136,7 +1136,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 			<!-- Block2 -->
 			<div class="block2">
 				<div class="block2-pic hov-img0">
-					<img src="../static/images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+					<img src="../static/images/${products[i].id}.jpg" alt="IMG-PRODUCT">
 
 					<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal${i+1}">
 						Quick View
@@ -1188,29 +1188,29 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 							<div class="wrap-slick3-arrows flex-sb-m flex-w"></div>
 
 							<div class="slick3 gallery-lb">
-								<div class="item-slick3" data-thumb="../static/images/${products[i].tag}.jpg">
+								<div class="item-slick3" data-thumb="../static/images/${products[i].id}.jpg">
 									<div class="wrap-pic-w pos-relative">
-										<img src="../static/images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+										<img src="../static/images/${products[i].id}.jpg" alt="IMG-PRODUCT">
 
-										<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].tag}.jpg">
+										<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].id}.jpg">
 											<i class="fa fa-expand"></i>
 										</a>
 									</div>
 								</div>
 
-								<div class="item-slick3" data-thumb="../static/images/${products[i].tag}.jpg">
+								<div class="item-slick3" data-thumb="../static/images/${products[i].id}.jpg">
 									<div class="wrap-pic-w pos-relative">
-										<img src="../static/images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+										<img src="../static/images/${products[i].id}.jpg" alt="IMG-PRODUCT">
 
-										<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].tag}.jpg">
+										<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].id}.jpg">
 											<i class="fa fa-expand"></i>
 										</a>
 									</div>
 								</div>
 
-								<div class="item-slick3" data-thumb="../static/images/${products[i].tag}.jpg">
+								<div class="item-slick3" data-thumb="../static/images/${products[i].id}.jpg">
 									<div class="wrap-pic-w pos-relative">
-										<img src="../static/images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+										<img src="../static/images/${products[i].id}.jpg" alt="IMG-PRODUCT">
 
 										<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].tag}.jpg">
 											<i class="fa fa-expand"></i>
