--- a/templates/product.html
+++ b/templates/product.html
@@ -911,7 +911,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 				<!-- Block2 -->
 				<div class="block2">
 					<div class="block2-pic hov-img0">
-						<img src="../static/images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+						<img src="../static/images/${products[i].id}.jpg" alt="IMG-PRODUCT">
 	
 						<a href="#" class="block2-btn flex-c-m stext-103 cl2 size-102 bg0 bor2 hov-btn1 p-lr-15 trans-04 js-show-modal${i+1}">
 							Quick View
@@ -963,31 +963,31 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								<div class="wrap-slick3-arrows flex-sb-m flex-w"></div>
 	
 								<div class="slick3 gallery-lb">
-									<div class="item-slick3" data-thumb="../static/images/${products[i].tag}.jpg">
+									<div class="item-slick3" data-thumb="../static/images/${products[i].id}.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="../static/images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+											<img src="../static/images/${products[i].id}.jpg" alt="IMG-PRODUCT">
 	
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].tag}.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].id}.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 	
-									<div class="item-slick3" data-thumb="../static/images/${products[i].tag}.jpg">
+									<div class="item-slick3" data-thumb="../static/images/${products[i].id}.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="../static/images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+											<img src="../static/images/${products[i].id}.jpg" alt="IMG-PRODUCT">
 	
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].tag}.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].id}.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
 									</div>
 	
-									<div class="item-slick3" data-thumb="../static/images/${products[i].tag}.jpg">
+									<div class="item-slick3" data-thumb="../static/images/${products[i].id}.jpg">
 										<div class="wrap-pic-w pos-relative">
-											<img src="../static/images/${products[i].tag}.jpg" alt="IMG-PRODUCT">
+											<img src="../static/images/${products[i].id}.jpg" alt="IMG-PRODUCT">
 	
-											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].tag}.jpg">
+											<a class="flex-c-m size-108 how-pos1 bor0 fs-16 cl10 bg0 hov-btn3 trans-04" href="../static/images/${products[i].id}.jpg">
 												<i class="fa fa-expand"></i>
 											</a>
 										</div>
