--- a/templates/signup-model.html
+++ b/templates/signup-model.html
@@ -100,3 +100,17 @@
 	</div> <!-- cd-signin-modal__container -->
 </div> <!-- cd-signin-modal -->
 <!--signup modal-->
+
+<!--signout modal-->
+
+<div class="modal signout-modal-sm" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog modal-sm">
+	  <div class="modal-content">
+		<div class="modal-header"><h4>Logout <i class="fa fa-lock"></i></h4></div>
+		<div class="modal-body" id="signout-body"><i class="fa fa-question-circle"></i> Are you sure you want to Sign-off?
+		<p class="row text-center" id="signout-msg"> You're Signed Out !!!</p>
+		</div>
+		<div class="modal-footer"><button onclick="signout();" class="btn btn-primary btn-block">Signout</button></div>
+	  </div>
+	</div>
+  </div>
