--- a/templates/product.html
+++ b/templates/product.html
@@ -53,7 +53,7 @@
 					</div>
 	
 					<div class="right-top-bar flex-w h-full">
-						<a href="#" class="flex-c-m trans-04 p-lr-25 js-signin-modal-trigger" data-signin="login">
+						<a href="#" class="flex-c-m trans-04 p-lr-25 js-signin-modal-trigger signin-out" data-signin="login" data-toggle="modal" data-target="">
 							Sign In
 						</a>
 	
@@ -161,7 +161,7 @@
 				<li>
 					<div class="right-top-bar flex-w h-full">
 	
-						<a href="#" class="flex-c-m trans-04 p-lr-10 js-signin-modal-trigger" data-signin="login">
+						<a href="#" class="flex-c-m trans-04 p-lr-10 js-signin-modal-trigger signin-out" data-signin="login" data-toggle="modal" data-target="">
 							Sign In
 						</a>
 	
